[project]
name = "langflow-executor-node"
version = "0.1.0"
description = "Langflow Component Executor Node - Executes Langflow components in isolated environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Droq Team", email = "team@droq.ai"}
]
keywords = ["droq", "langflow", "executor", "component", "workflow"]

dependencies = [
    "fastapi>=0.115.13,<1.0.0",      # For HTTP API server
    "uvicorn[standard]>=0.34.3,<1.0.0",  # ASGI server
    "pydantic>=2.0.0,<3.0.0",       # For request/response validation
    "httpx>=0.24.0,<0.28.0",        # For HTTP client (aligned with OpenAI SDK)
    "structlog>=25.4.0,<26.0.0",    # For structured logging
    "python-dotenv>=1.0.0,<2.0.0",  # For environment variables
    "nats-py>=2.6.0,<3.0.0",        # For NATS streaming
    "beautifulsoup4>=4.12.0,<5.0.0",  # HTML parsing for Web/RSS components
    "lxml>=4.9.0,<5.0.0",            # Fast parser backend for BeautifulSoup
    "chardet==5.2.0",
    "defusedxml==0.7.1",
    "aiofiles>=22.1.0,<24.0.0",     # Needed by ChatInput file handling
    "nanoid>=2.0.0,<4.0.0",         # Used for generating unique IDs
    "platformdirs>=4.0.0,<6.0.0",   # Required by lfx utilities
    "pillow>=10.0.0,<11.0.0",       # Image support for input components
    "emoji>=2.14.0,<3.0.0",         # Emoji rendering in chat components
    "langchain-core>=0.3.79,<0.4.0",  # Pinned for compatibility with Langflow
    "langchain==0.3.23",
    "langchain-anthropic==0.3.14",
    "langchain-astradb>=0.6.1,<1.0.0",
    "langchain-aws==0.2.33",
    "langchain-chroma>=0.2.6,<1.0.0",
    "langchain-cohere==0.3.3",
    "langchain-community>=0.3.21,<1.0.0",
    "langchain-docling>=1.1.0",
    "langchain-elasticsearch==0.3.0",
    "langchain-google-calendar-tools==0.0.1",
    "langchain-google-community==2.0.3",
    "langchain-google-genai==2.0.6",
    "langchain-google-vertexai>=2.0.7,<3.0.0",
    "langchain-graph-retriever==0.8.0",
    "langchain-groq==0.2.1",
    "langchain-huggingface==0.3.1",
    "langchain-milvus==0.1.7",
    "langchain-mistralai==0.2.3",
    "langchain-mongodb==0.7.0",
    "langchain-nvidia-ai-endpoints==0.3.8",
    "langchain-ollama==0.2.1",
    "langchain-openai>=0.2.12,<1.0.0",
    "langchain-pinecone>=0.2.8,<1.0.0",
    "langchain-sambanova==0.1.0",
    "langchain-unstructured==0.1.5",
    "langchain-ibm>=0.3.8",
    # Note: Langflow dependencies will be added via path or package reference
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
executor-node = "node.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/node"]
include = ["src/node/**/*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N814"]  # Allow camelcase imports as constants (common for NATS library)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

