[project]
name = "langflow-executor-node"
version = "0.1.0"
description = "Langflow Component Executor Node - Executes Langflow components in isolated environments"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Droq Team", email = "team@droq.ai"}
]
keywords = ["droq", "langflow", "executor", "component", "workflow"]

dependencies = [
    "fastapi>=0.115.13,<1.0.0",      # For HTTP API server
    "uvicorn[standard]>=0.34.3,<1.0.0",  # ASGI server
    "pydantic>=2.0.0,<3.0.0",       # For request/response validation
    "httpx>=0.24.0,<1.0.0",         # For HTTP client
    "structlog>=25.4.0,<26.0.0",    # For structured logging
    "python-dotenv>=1.0.0,<2.0.0",  # For environment variables
    "nats-py>=2.0.0,<3.0.0",        # For NATS messaging
    "requests>=2.28.0,<3.0.0",      # For HTTP requests in components
    "beautifulsoup4>=4.12.0,<5.0.0", # For HTML/XML parsing
    "lxml>=5.0.0,<6.0.0",           # For XML parsing with BeautifulSoup
    "pandas>=2.0.0,<3.0.0",         # For DataFrame handling
    "qdrant-client>=1.11.0,<1.12.0",  # For Qdrant vector store (pinned for langchain-qdrant compatibility)
    "langchain-qdrant>=1.1.0,<2.0.0",  # For LangChain Qdrant integration
    "langchain-core>=0.3.0,<1.0.0",    # Pin to 0.3.x - 1.x removed memory module
    # Note: Langflow dependencies will be added via path or package reference
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
executor-node = "node.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/node"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N814"]  # Allow camelcase imports as constants (common for NATS library)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

